archive_entities_helm/templates/neodash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neodash
  labels:
    app: neodash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neodash
  template:
    metadata:
      labels:
        app: neodash
    spec:
      containers:
      - name: neodash
        image: nielsdejong/neodash:latest
        ports:
        - containerPort: 5005
        # Optional: Set environment variables for Standalone/Reader mode
