archive_entities_helm/templates/neodash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neodash-service
spec:
  selector:
    app: neodash
  ports:
    - protocol: TCP
      port: 83
      targetPort: 5005
  type: LoadBalancer # Change to ClusterIP if using an Ingress
