archive_entities_helm/templates/neodash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neodash
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /neodash
        pathType: Prefix
        backend:
          service:
            name: neodash-service
            port:
              number: 80
